# cutter-with-image-test

./: .gitignore  Makefile.am  autogen.sh  configure.ac  resizer.c  test-sample.c
